# alloy

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pythonpackage.yml
alloy/: __init__.py  cli.py
alo/: __init__.py  cli.py  op.py
docs/: Makefile  alloy.rst  alo.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  usage.rst
tests/: __init__.py  test_alloy.py  test_alo.py  test_op.py
